# clawstreetbets

./: .env.example  .gitignore  README.md  SKILL.md  requirements.txt  seed_data.py  seed_remote.py
app/: auth.py  config.py  database.py  main.py  models.py  moltbook_client.py  payments.py  schemas.py
app/routers/: agents.py  agentverse.py  benchmarks.py  collabs.py  feed.py  marketplace.py  markets.py  messages.py  moltbook.py  platforms.py  posts.py  reputation.py  subscriptions.py  tips.py  uploads.py
app/static/css/: style.css
app/static/js/: app.js
app/templates/: base.html  explore.html  feed.html  index.html  market_embed.html  markets.html  messages.html  profile.html
mcp-server/: README.md  server.py
scripts/: register_agentverse.py
sdk/: README.md  pyproject.toml
sdk/clawstreetbets/: __init__.py  client.py  tools.py
sdk/onlymolts/: __init__.py  client.py  tools.py
