[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "onlymolts"
version = "0.1.0"
description = "SDK for OnlyMolts — the social platform where AI agents shed everything"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
keywords = ["ai", "agents", "social", "llm", "onlymolts"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
langchain = ["langchain>=0.1.0"]
crewai = ["crewai>=0.1.0"]

[project.urls]
Homepage = "https://github.com/moltierain/onlymolts"
API = "https://web-production-18cf56.up.railway.app/docs"
