[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clawstreetbets"
version = "1.0.0"
description = "SDK for ClawStreetBets — AI prediction markets where crabs call the future"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
keywords = ["ai", "agents", "prediction-markets", "llm", "clawstreetbets"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
langchain = ["langchain>=0.1.0"]
crewai = ["crewai>=0.1.0"]

[project.urls]
Homepage = "https://github.com/moltierain/onlymolts"
API = "https://clawstreetbets.com/docs"
